# griptape-nodes-library-diffusers

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  griptape-nodes-library.json  pyproject.toml
.github/workflows/: workflow-tests.yml
diffusers_nodes_library/artifact_utils/: inpaint_mask_artifact.py  pipeline_artifact.py
diffusers_nodes_library/latent_pipeline_drivers/: base_driver.py  driver_factory.py  flux.py  flux2.py  flux2_base.py  flux2_klein.py  flux_fill.py  ltx.py  qwen.py  qwen_edit.py  stable_diffusion_xl.py  wan.py  wan_i2v.py  z_image.py
diffusers_nodes_library/nodes/: add_latents.py  controlnet_node.py  controlnet_pipeline_node.py  diffusion_pipeline_generate_latent_node.py  elementwise_latent_math.py  empty_latent_node.py  latent_composite_mask_node.py  latent_diffusion_pipeline_builder_node.py  latent_upsampler_node.py  load_lora_node.py  multiply_latents.py  noise_latent_node.py  save_latent_tensor.py  subtract_latents.py  vae_decoder.py  vae_encoder.py  vae_mask_encoder.py
diffusers_nodes_library/parameters/: controlnet_node_parameter_types.py  generate_latent_parameters.py  modular_pipeline_type_parameters.py  pipeline_builder_parameters.py  pipeline_parameters.py  pipelinetype_parameters.py  upsampler_parameter_type.py
diffusers_nodes_library/runtime_parameters/: flux2_runtime_parameters.py  flux_fill_runtime_parameters.py  flux_runtime_parameters.py  ltx_runtime_parameters.py  qwen_edit_runtime_parameters.py  qwen_runtime_parameters.py  stable_diffusion_xl_runtime_parameters.py  wan_i2v_runtime_parameters.py  wan_runtime_parameters.py  z_image_runtime_parameters.py
diffusers_nodes_library/standard_parameters/: flux2_klein_parameters.py  flux2_parameters.py  flux_fill_parameters.py  flux_parameters.py  ltx_parameters.py  qwen_edit_parameters.py  qwen_parameters.py  stable_diffusion_sdxl_parameters.py  wan_i2v_parameters.py  wan_parameters.py  z_image_parameters.py
diffusers_nodes_library/utils/: conditioning_utils.py  directory_utils.py  huggingface_utils.py  pipeline_utils.py
docs/: adding-new-model.md  index.md  node-doc-format.md
docs/nodes/: add_latents.md  configure_controlnet.md  controlnet_pipeline.md  create-noise-latents.md  decode_hdr_latents.md  decode_media_latent.md  empty_latents.md  encode_masked_media_latent.md  encode_media_latent.md  generate_media_latents.md  latent_upsampler.md  latents_composite_mask.md  load_lora.md  lora_pipeline.md  media_gen_conditioning.md  multiply_latents.md  pipeline_builder.md  save_latent_tensor.md  subtract_latents.md
modular_diffusion_nodes_library/artifact_utils/: __init__.py  inpaint_mask_artifact.py  latent_artifact.py  pipeline_artifact.py  pipeline_build_steps.py
modular_diffusion_nodes_library/latent_pipeline_drivers/: _base_driver_forwardable_signature.py  base_driver.py  driver_factory.py  driver_types.py  flux.py  flux2.py  flux2_base.py  flux2_klein.py  flux_fill.py  flux_kontext.py  hunyuan_video1_5.py  hunyuan_video1_5_i2v.py  ltx.py  ltx2.py  qwen.py  qwen_edit.py  stable_diffusion_3.py  stable_diffusion_xl.py  wan.py  wan_animate.py  wan_i2v.py  wan_vace.py  z_image.py
modular_diffusion_nodes_library/misc/: partial_denoise.py
modular_diffusion_nodes_library/mixins/: __init__.py  parameter_connection_preservation_mixin.py  success_failure_execution_mixin.py
modular_diffusion_nodes_library/nodes/: add_latents.py  controlnet_node.py  controlnet_pipeline_node.py  decode_hdr_node.py  diffusion_pipeline_generate_latent_node.py  elementwise_latent_math.py  empty_latent_node.py  latent_composite_mask_node.py  latent_diffusion_pipeline_builder_node.py  latent_upsampler_node.py  load_lora_node.py  lora_pipeline_node.py  media_gen_conditioning_node.py  multiply_latents.py  noise_latent_node.py  save_latent_tensor.py  subtract_latents.py  vae_decoder.py  vae_encoder.py  vae_mask_encoder.py
modular_diffusion_nodes_library/parameters/: conditioning_parameters.py  controlnet_node_parameter_types.py  controlnet_pipeline_builder_parameters.py  file_path_parameter.py  generate_latent_parameters.py  huggingface_pipeline_parameter.py  lora_parameters.py  media_gen_conditioning_parameter.py  pipeline_builder_parameters.py  pipeline_parameters.py  pipelinetype_parameters.py  providers.py  scheduler_parameters.py  upsampler_parameter_type.py
modular_diffusion_nodes_library/runtime_parameters/: conditioning_runtime_parameter.py  flux2_klein_runtime_parameters.py  flux2_runtime_parameters.py  flux_fill_runtime_parameters.py  flux_kontext_runtime_parameters.py  flux_runtime_parameters.py  hunyuan_video1_5_i2v_runtime_parameters.py  hunyuan_video1_5_runtime_parameters.py  ltx2_runtime_parameters.py  ltx_runtime_parameters.py  null_runtime_parameters.py  qwen_edit_runtime_parameters.py  qwen_runtime_parameters.py  runtime_parameters.py  runtime_params_registry.py  stable_diffusion_3_runtime_parameters.py  stable_diffusion_xl_runtime_parameters.py  wan_animate_runtime_parameters.py  wan_i2v_runtime_parameters.py  wan_runtime_parameters.py  wan_vace_runtime_parameters.py  z_image_runtime_parameters.py
modular_diffusion_nodes_library/standard_parameters/: flux2_klein_parameters.py  flux2_parameters.py  flux_fill_parameters.py  flux_kontext_parameters.py  flux_parameters.py  hunyuan_video1_5_i2v_parameters.py  hunyuan_video1_5_parameters.py  ltx2_parameters.py  (+10 more)
(+45 files in other folders)
