[project]
name = "griptape-nodes-library-modular-diffusion"
version = "0.4.0"
description = "Modular Diffusion nodes for Griptape Nodes."
authors = [
    {name = "Griptape, Inc."}
]
requires-python = "~=3.12.0"
dependencies = [
    "accelerate>=1.6.0",
    "av>=14.0.0",
    "beautifulsoup4>=4.13.4",
    "controlnet-aux>=0.0.9",
    "static-ffmpeg>=2.8",
    "diffusers==0.39.0",
    "imageio[ffmpeg]>=2.37.2",
    "ninja>=1.13.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "peft>=0.17.0",
    "pillow>=11.2.1",
    "sentencepiece>=0.2.0",
    "cmake==3.31.6",
    "spandrel>=0.4.1",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "torchaudio==2.7.0",
    "safetensors>=0.8.0rc0",
    "transformers==5.13.0",
    "tokenizers>=0.22.0,<0.23",
    "tqdm>=4.67.1",
    "ultralytics>=8.0.0",
    "optimum-quanto>=0.2.7",
    "protobuf>=6.31.0",
    "prodigyopt>=1.1.2; sys_platform == 'win32'",
    "bitsandbytes>=0.46.0; sys_platform == 'win32'",
    "ftfy>=6.3.1",
    "sam2>=1.1.0",
    "scipy>=1.10.0",
    "matplotlib>=3.10.3",
    "supervision>=0.27.0",
    "griptape[drivers-prompt-amazon-bedrock,drivers-prompt-anthropic,drivers-prompt-cohere,drivers-prompt-ollama,drivers-web-scraper-trafilatura,drivers-web-search-duckduckgo,drivers-web-search-exa,loaders-image]>=1.9.4",
    "openexr>=3.3.0",
    "griptape-nodes>=0.77.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "modular_diffusion_nodes_library",
    "workflows",
]

# `uv sync` equivalent of the JSON's `--torch-backend=auto`: pull CUDA torch
# wheels on Windows/Linux, fall back to PyPI (MPS build) on macOS.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["workflows/templates/*.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
exclude = ["workflows/", ".venv/", "**/__pycache__"]

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "ruff>=0.8.0",
    "pytest",
]
